Agregamos las variables de entorno para conectarnos a la BD del cliente

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+# Variables de entorno para la base de datos principal
 NAME_DB = Sistema_consulta_nip
 USER_DB = root
 PASS_DB = 17121991
@@ -5,3 +6,10 @@ HOST_DB = localhost
 PORT    = 8080
 
 SECRETORPRIVATEKEY = s1st3m@D3C0nsultaNi9
+
+# Variables de entorno para la base de datos de los clientes
+NIP_NAME_DB = NIPS
+NIP_USER_DB = root
+NIP_PASS_DB = 17121991
+NIP_HOST_DB = localhost
+NIP_PORT    = 3307
