--- a/.dev.env
+++ b/.dev.env
@@ -1,8 +1,8 @@
-NAME_DB =
-USER_DB =
-PASS_DB =
-HOST_DB =
-PORT =
+MYSQLDATABASE =
+MYSQLUSER =
+MYSQLPASSWORD =
+MYSQLHOST =
+MYSQLPORT =
 
 SECRETORPRIVATEKEY =
 
