Se configuran variables de entorno, pendiente volver a reestablecer

--- a/.dev.env
+++ b/.dev.env
@@ -1,9 +1,10 @@
-MYSQLDATABASE =
-MYSQLUSER =
-MYSQLPASSWORD =
-MYSQLHOST =
-MYSQLPORT =
+NAME_DB =
+USER_DB =
+PASS_DB =
+HOST_DB =
+PORT =
 
+DB_URL = 
 SECRETORPRIVATEKEY =
 
 # Variables de entorno para la base de datos de los clientes
